<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.org.catolicasc.fcgf.binaryoperations.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resultText" />

        <EditText
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:hint="@string/hint"
            style="@style/Widget.AppCompat.EditText" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addButton"
                android:layout_weight="1"
                android:elevation="0dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/minus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subtractButton"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/multiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/multiplyButton"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/divide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/divideButton"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/clearButton"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
